--- a/angular.json
+++ b/angular.json
@@ -22,8 +22,8 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.css"
+            "styles": [ 
+              "src/styles.scss" 
             ],
             "scripts": [],
             "es5BrowserSupport": true
